# german_law_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: .gitignore
german_law_bot/: config.yaml  constants.py  frontend.py  history.py  ingest.py  qa.py  utils.py
german_law_bot/prompts/: prompt_qa.py
